--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -9,8 +9,10 @@ dependencies = [
     "authlib>=1.6.1",
     "fastapi>=0.116.1",
     "httpx>=0.28.1",
+    "psycopg>=3.2.9",
     "pydantic-settings>=2.10.1",
-    "pydantic>=2.11.7",
+    "pydantic[email]>=2.11.7",
+    "pyjwt>=2.10.1",
     "sqlalchemy>=2.0.41",
     "uvicorn>=0.35.0",
 ]
