--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,14 +5,13 @@ services:
     build:
       context: ./server/
       dockerfile: Dockerfile
-    #volumes:
-    #  - .:/jeffersonlab_phonebook
-    ports:
-      - "8000:8000"
     env_file:
       - .env
     depends_on:
-      - db
+      db:
+        condition: service_healthy # Wait for the 'db' service to be healthy
+    networks:
+      - app_network
 
   db:
     container_name: phonebook-db
@@ -20,12 +19,36 @@ services:
     restart: always
     ports:
       - "5432:5432"
-    environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+    env_file:
+      - .env
     volumes:
-      - pgdata:/var/lib/postgresql/data
+      - ./pgdata:/var/lib/postgresql/data
+    networks:
+      - app_network
+    healthcheck: # This block tells Docker how to check if the DB is ready
+      test: ["CMD-SHELL", "pg_isready -U postgres -d phonebook"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
 
-volumes:
-  pgdata:
+# ... (other services like nginx and networks)
+
+  nginx:
+    image: nginx:latest
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/ssl:/etc/nginx/ssl
+      - ./frontend/phonebook-frontend:/phonebook-frontend
+    depends_on:
+      - backend
+    restart: always
+    networks:
+      - app_network
+
+networks:
+  app_network:
+    driver: bridge
