--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "authlib>=1.6.1",
     "fastapi>=0.116.1",
     "httpx>=0.28.1",
+    "itsdangerous>=2.2.0",
     "psycopg>=3.2.9",
     "pydantic-settings>=2.10.1",
     "pydantic[email]>=2.11.7",
