--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.10"
 dependencies = [
     "asyncpg>=0.30.0",
     "authlib>=1.6.1",
+    "eralchemy[graphviz]>=1.5.0",
     "fastapi>=0.116.1",
     "httpx>=0.28.1",
     "itsdangerous>=2.2.0",
@@ -40,6 +41,7 @@ exclude = [
     ".env",
     "alembic",
     ".*models\\.py$",
+    "pgdata",
 ] # Exclude your alembic folder as well
 
 [tool.ruff]
