--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,56 +1,71 @@
-# This block listens on port 80 and redirects all HTTP traffic to HTTPS.
+# /nginx-proxy/nginx.conf
+
 server {
     listen 80;
-    listen [::]:80;
     server_name vulcan.jlab.org;
 
-    # Redirect all HTTP requests to HTTPS
-    return 301 https://$host$request_uri;
+    # Redirect all HTTP traffic to HTTPS
+    location / {
+        return 301 https://$host$request_uri;
+    }
 }
 
-# This is the main server block for HTTPS on port 443.
 server {
     listen 443 ssl;
-    listen [::]:443 ssl;
     server_name vulcan.jlab.org;
 
-    # Path to your SSL certificate files
-    # Replace these with the actual paths to your certificate and key.
-    # Certbot will automatically handle these paths for you.
+    # SSL Certificate and Key
     ssl_certificate /etc/nginx/ssl/hostcert.pem;
     ssl_certificate_key /etc/nginx/ssl/hostkey.pem;
 
-    # Recommended SSL settings for security
+    # SSL settings
     ssl_session_cache shared:SSL:10m;
     ssl_session_timeout 10m;
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers 'ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA384:DHE-RSA-AES128-SHA256:DHE-RSA-AES256-SHA256:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256';
     ssl_prefer_server_ciphers on;
 
-    # Set the root directory for your static files
-    root /phonebook-frontend;
-
-    # Define the default files to serve
-    index index.html members.html institutions.html login.html;
-
-    # Frontend location block
+    # Route requests for the frontend
     location / {
-        try_files $uri $uri/ =404;
-    }
-
-    # API reverse proxy location block
-    location /api/v1/ {
-        # No rewrite rule needed. The backend will handle the full /api/v1/ path.
-        proxy_pass http://backend:8000;
-
+        # The 'frontend' here matches the service name in docker-compose.yml
+        proxy_pass http://frontend;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
-    # Optional: Cache control for static assets (CSS, JS)
-    location ~* \.(js|css)$ {
-        expires 30d;
-        add_header Cache-Control "public, no-transform";
+
+    location /docs {
+        proxy_pass http://backend:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location /redoc {
+        proxy_pass http://backend:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location /openapi.json {
+        proxy_pass http://backend:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+    # Route requests for the backend API
+    # All requests starting with /api/v1/ will be sent to the backend server
+    location /api/v1/ {
+        # The 'server' here matches the service name in docker-compose.yml
+        proxy_pass http://backend:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
