--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "pydantic-settings>=2.10.1",
     "pydantic[email]>=2.11.7",
     "pyjwt>=2.10.1",
+    "requests>=2.32.4",
     "sqlalchemy>=2.0.41",
     "uvicorn>=0.35.0",
 ]
